scripts using file locations on the Cornell host